--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2443,3 +2443,79 @@ input, select, textarea {
 					}
 
 	}
+
+	.tooltip {
+		position: relative;
+		display: inline-block;
+	  }
+
+	  .tooltip1{
+		position: relative;
+		display: inline-block;
+	  }
+	  
+	  .tooltip .tooltiptext{
+		visibility: hidden;
+		width: 140px;
+		background-color: #555;
+		color: #fff;
+		text-align: center;
+		border-radius: 6px;
+		padding: 5px;
+		position: absolute;
+		z-index: 1;
+		bottom: 150%;
+		left: 50%;
+		margin-left: -75px;
+		opacity: 0;
+		transition: opacity 0.3s;
+	  }
+
+	  .tooltip1 .tooltiptext1{
+		visibility: hidden;
+		width: 140px;
+		background-color: #555;
+		color: #fff;
+		text-align: center;
+		border-radius: 6px;
+		padding: 5px;
+		position: absolute;
+		z-index: 1;
+		bottom: 150%;
+		left: 50%;
+		margin-left: -75px;
+		opacity: 0;
+		transition: opacity
+	  }
+	  
+	  .tooltip .tooltiptext::after {
+		content: "";
+		position: absolute;
+		top: 100%;
+		left: 50%;
+		margin-left: -5px;
+		border-width: 5px;
+		border-style: solid;
+		border-color: #555 transparent transparent transparent;
+	  }
+
+	  .tooltip1 .tooltiptext1::after{
+		content: "";
+		position: absolute;
+		top: 100%;
+		left: 50%;
+		margin-left: -5px;
+		border-width: 5px;
+		border-style: solid;
+		border-color: #555 transparent transparent transparent;
+	  }
+	  
+	  .tooltip:hover .tooltiptext {
+		visibility: visible;
+		opacity: 1;
+	  }
+
+	  .tooltip1:hover .tooltiptext1{
+		visibility: visible;
+		opacity: 1;
+	  }
